# taskerizer

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  ideas.txt  notes.md  todo.txt
src/: commands.rs  config.rs  lib.rs  main.rs  task.rs
src/commands/: add.rs  complete.rs  current.rs  list.rs  mod.rs  serve.rs  skip.rs  test_dispatch.rs  test_utils.rs
src/config/: mod.rs
src/config/tests/: mod.rs  util.rs
src/db/: backend.rs  create.rs  mod.rs  tests.rs
src/db/tests/: add.rs  choose_current.rs  clear_uset_op.rs  complete.rs  fetch_current.rs  fetch_replica_server.rs  fetch_replicas.rs  fetch_uset_op.rs  get_current.rs  list.rs  mod.rs  remove_by_uuid.rs  select_current.rs  skip.rs  store_replica.rs  store_replica_server.rs  store_uset_op.rs  utils.rs
src/db/tests/ops/: choose_current.rs  get_current.rs  mod.rs
src/db/transaction/: mod.rs
src/db/transaction/tests/: add.rs  add_replica_server.rs  clear_uset_op.rs  fetch_current.rs  fetch_replica_server.rs  fetch_uset_op.rs  get_current.rs  list.rs  mark_complete.rs  mod.rs  pop_current.rs  remove_by_uuid.rs  remove_task.rs  set_current.rs  store_replica.rs  store_replica_server.rs  store_uset_op.rs
src/selection/: mod.rs  top.rs  weighted_random.rs
src/selection/tests/: mod.rs  top.rs  weighted_random.rs
src/sync/: mod.rs  test_utils.rs
src/sync/process/: mod.rs
src/sync/server/: mod.rs  test.rs
src/sync/tests/: add.rs  apply_all.rs  mod.rs  remove.rs
src/task/: mod.rs  test_utils.rs  tests.rs
tests/: add.rs  complete.rs  current.rs  list.rs  skip.rs  test_utils.rs
(+5 files in other folders)
