[package]
name = "taskerizer-prototype"
version = "0.1.0"
authors = ["Harry Stern <hcs@meow.sh>"]

[[bin]]
name = "tkzr"
path = "src/main.rs"

[dependencies]
structopt = "0.2"
failure = "0.1"
rusqlite = { version = "0.14", features = ["chrono", "bundled"] }
chrono = "0.4"
rand = "0.5"

[dev-dependencies]
proptest = "0.8"
tempfile = "3"
