[package]
name = "taskerizer-prototype"
version = "0.1.0"
authors = ["Harry Stern <hcs@meow.sh>"]

edition = "2018"

[[bin]]
name = "tkzr"
path = "src/main.rs"

[dependencies]
structopt = "0.2"
failure = "0.1"
rusqlite = { version = "0.18", features = ["chrono", "bundled"] }
chrono = "0.4"
rand = "0.6"
directories = "1.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "u128", "serde"] }

# for uuid -> sql and back conversions
# this can be removed if rusqlite gets u128 conversion built-in
byteorder = "1"

[dev-dependencies]
proptest = { version = "0.9", default-features = false, features = ["default-code-coverage"] }
tempfile = "3"
